--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
     "eslint-config-upleveled": "^4.1.10",
