--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@upleveled/react-scripts": "5.0.5",
+    "download": "^8.0.0",
     "fetch": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
